Fix for nav z-index issue.

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -336,7 +336,6 @@ a.cta-button:focus {
 
 .page-navigation-container {
 	position: relative;
-	z-index: 1;
 	background: $color-white;
 }
 .page-navigation-container .menu-primary-nav-container {
